# microservices-grpc-onlinebooks

./: .gitignore  README.md  docker-compose.yml  kubernetes.yml
marketplace/: Dockerfile  marketplace.py  marketplace_integration_test.py  push_images.sh  pyproject.toml  recommendations_pb2.py
protobufs/: recommendations.proto
recommendations/: Dockerfile  demo_client.py  pyproject.toml  recommendations.py
