[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["ThangTD"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio-tools = "^1.56.0"
flask = "^2.3.2"
jinja2 = "^3.1.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
